mqtt-server/src/main/k8s/ss.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mqtt-server
  namespace: kafka
  annotations:
    app.quarkus.io/quarkus-version: 3.23.4
    app.quarkus.io/vcs-uri: 'https://github.com/TiagoAvelino/loadTest.git'
  labels:
    app.kubernetes.io/managed-by: quarkus
    app.kubernetes.io/name: mqtt-server
    app.kubernetes.io/version: 1.0.0-SNAPSHOT
    app.openshift.io/runtime: quarkus
spec:
  serviceName: mqtt-server-headless
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: mqtt-server
      app.kubernetes.io/version: 1.0.0-SNAPSHOT
  template:
    metadata:
      labels:
        app.kubernetes.io/managed-by: quarkus
        app.kubernetes.io/name: mqtt-server
        app.kubernetes.io/version: 1.0.0-SNAPSHOT
        app.openshift.io/runtime: quarkus
      annotations:
        alpha.image.policy.openshift.io/resolve-names: '*'
        app.quarkus.io/quarkus-version: 3.23.4
        app.quarkus.io/vcs-uri: 'https://github.com/TiagoAvelino/loadTest.git'
    spec:
      volumes:
        - name: truststore
          secret:
            secretName: kafka-client-ssl-secret
            defaultMode: 384
            optional: false
      containers:
        - name: mqtt-server
          image: quay.io/rh_ee_tavelino/mqtt-server:latest
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
            - name: management
              containerPort: 9000
              protocol: TCP
          volumeMounts:
            - name: truststore
              mountPath: /mnt/truststore
          readinessProbe:
            httpGet:
              path: /q/health/ready
              port: 9000
              scheme: HTTP
            initialDelaySeconds: 5
            timeoutSeconds: 10
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /q/health/live
              port: 9000
              scheme: HTTP
            initialDelaySeconds: 5
            timeoutSeconds: 10
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 3
          startupProbe:
            httpGet:
              path: /q/health/started
              port: 9000
              scheme: HTTP
            initialDelaySeconds: 5
            timeoutSeconds: 10
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 3
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
  podManagementPolicy: OrderedReady
  updateStrategy:
    type: RollingUpdate
  revisionHistoryLimit: 10
